# gameOfLife

./: CMakeLists.txt  LICENSE  main.cpp  readMe.md
benchmark/: CpuVsGpu.cpp  CpuVsGpu.h
core/: ConwayGame.cpp  ConwayGame.h
kernels/: ConwayGame.cl
opencl/: ConwayGameCl.cpp  ConwayGameCl.h  OpenClProgram.cpp  OpenClProgram.h
results/: openCl.csv
serial/: ConwayGame.cpp  ConwayGame.h
view/: Windows.cpp  Windows.h
